# internal/documentviewer/modules/documents/api/doc.go
@@ -1,2 +1,0 @@
-// Package api is the documents HTTP surface.
-package api
